# iso-rts

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/maps/: 001.map  10x10-01.map  11x11-01.map  12x12-01.map  15x15-01.map  20x20-01.map  20x20-02.map  20x20-empty.map  40x40-01.map  5x5-01.map  60x60-01.map  6x6-01.map  7x7-01.map  80x80-01.map  8x8-01.map  9x9-01.map
lib/: CMakeLists.txt
lib/ai/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/include/core/: Application.h  Point.h  Rect.h  Size.h
lib/core/include/core/event/: ApplicationEvent.h  ApplicationEventListener.h  Event.h  EventListener.h  KeyboardEvent.h  KeyboardEventListener.h  MouseButtonEvent.h  MouseEvent.h  MouseEventListener.h  MouseMotionEvent.h
lib/core/src/: Application.cpp
lib/core/src/event/: ApplicationEventListener.cpp  DummyListener.cpp  DummyListener.h  Event.cpp  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  KeyboardEvent.cpp  KeyboardEventListener.cpp  MouseButtonEvent.cpp  MouseEvent.cpp  MouseEventListener.cpp  MouseMotionEvent.cpp
lib/graphic/: CMakeLists.txt
lib/graphic/include/graphic/: Camera.h  DummyRenderable.h  Font.h  FontManager.h  GraphicConstants.h  Image.h  Particle.h  ParticleData.h  ParticlesManager.h  ParticlesUpdater.h  Renderable.h  Renderer.h  Text.h  Texture.h  TextureData.h  TextureManager.h  TexturedRenderable.h  Window.h
lib/graphic/src/: Camera.cpp  DummyRenderable.cpp  Font.cpp  FontManager.cpp  Image.cpp  ParticlesManager.cpp  ParticlesUpdater.cpp  Renderable.cpp  Renderer.cpp  Text.cpp  Texture.cpp  TextureData.cpp  TextureManager.cpp  TexturedRenderable.cpp  Window.cpp
lib/sgui/: CMakeLists.txt
lib/sgui/include/sgui/: AbstractButtonsGroup.h  ButtonsGroup.h  Image.h  ImageButton.h  Label.h  ProgressBar.h  PushButton.h  Stage.h  TextArea.h  Widget.h  WidgetContainer.h
lib/sgui/src/: AbstractButtonsGroup.cpp  ButtonsGroup.cpp  Image.cpp  ImageButton.cpp  Label.cpp  ProgressBar.cpp  PushButton.cpp  Stage.cpp  TextArea.cpp  Widget.cpp  WidgetContainer.cpp
lib/utilities/: CMakeLists.txt
lib/utilities/include/utilities/: ISystem.h  LoadedDie.h  State.h  StateManager.h  System.h  UniformDistribution.h
lib/utilities/include/utilities/linux/: System.h
lib/utilities/src/: LoadedDie.cpp  State.cpp  StateManager.cpp  UniformDistribution.cpp
lib/utilities/src/linux/: System.cpp
lib/utilities/src/windows/: System.cpp
scripts/: update_version.sh
src/: CameraMap.cpp  CameraMap.h  CameraMapController.cpp  CameraMapController.h  Cell2D.h  ControlMap.cpp  ControlMap.h  Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  GameData.cpp  GameData.h  GameMap.cpp  GameMap.h  GameMapCell.cpp  GameMapCell.h  GameObject.cpp  GameObject.h  GameObjectEnums.h  GameTestData.cpp  GameTestData.h  IsoLayer.cpp  IsoLayer.h  IsoMap.cpp  IsoMap.h  IsoObject.cpp  IsoObject.h  MapLoader.cpp  MapLoader.h  MapsRegistry.cpp  MapsRegistry.h  Player.cpp  Player.h  ResourceGenerator.cpp  ResourceGenerator.h  StatValue.cpp  StatValue.h  Unit.cpp  Unit.h  (+1 more)
src/AI/: ActionAI.h  ConquerPath.cpp  ConquerPath.h  ObjectPath.cpp  ObjectPath.h  PlayerAI.cpp  PlayerAI.h  WallBuildPath.cpp  WallBuildPath.h
src/GameObjects/: Base.cpp  Base.h  Blobs.cpp  Blobs.h  BlobsGenerator.cpp  BlobsGenerator.h  Collectable.cpp  Collectable.h  CollectableGenerator.cpp  CollectableGenerator.h  DefensiveTower.cpp  DefensiveTower.h  Diamonds.cpp  Diamonds.h  DiamondsGenerator.cpp  DiamondsGenerator.h  GameObject.cpp  GameObject.h  GameObjectAction.h  GameObjectEnums.h  GameObjectTypes.h  LootBox.cpp  LootBox.h  ObjectData.cpp  ObjectData.h  ObjectsDataRegistry.cpp  ObjectsDataRegistry.h  PracticeTarget.cpp  PracticeTarget.h  RadarStation.cpp  RadarStation.h  RadarTower.cpp  RadarTower.h  ResourceGenerator.cpp  ResourceGenerator.h  ResourceStorage.cpp  ResourceStorage.h  SceneObject.cpp  SceneObject.h  Structure.cpp  (+14 more)
src/Indicators/: AttackRangeIndicator.cpp  AttackRangeIndicator.h  ConquestIndicator.cpp  ConquestIndicator.h  HealingRangeIndicator.cpp  HealingRangeIndicator.h  MoveIndicator.cpp  MoveIndicator.h  StructureIndicator.cpp  StructureIndicator.h  WallIndicator.cpp  WallIndicator.h
src/Particles/: DataParticleDamage.h  DataParticleHealing.h  DataParticleLootboxPrize.h  DataParticleSingleLaser.h  ParticleDamage.cpp  ParticleDamage.h  ParticleHealing.cpp  ParticleHealing.h  ParticleLootboxPrize.cpp  ParticleLootboxPrize.h  ParticleSingleLaser.cpp  ParticleSingleLaser.h  UpdaterDamage.cpp  UpdaterDamage.h  UpdaterHealing.cpp  UpdaterHealing.h  UpdaterLootboxPrize.cpp  UpdaterLootboxPrize.h  UpdaterSingleLaser.cpp  UpdaterSingleLaser.h
src/Screens/: Screen.cpp  Screen.h  ScreenFactionSelection.cpp  ScreenFactionSelection.h  ScreenGame.cpp  ScreenGame.h  ScreenIds.h  ScreenInit.cpp  ScreenInit.h  ScreenMainMenu.cpp  ScreenMainMenu.h  ScreenNewGame.cpp  ScreenNewGame.h  ScreenPlanetMap.cpp  ScreenPlanetMap.h  ScreenSettings.cpp  ScreenSettings.h  ScreenTest.cpp  ScreenTest.h  SharedScreenListener.cpp  SharedScreenListener.h
src/States/: BaseGameState.cpp  BaseGameState.h  StateFactionSelection.cpp  StateFactionSelection.h  StateGame.cpp  StateGame.h  StateInit.cpp  StateInit.h  StateMainMenu.cpp  StateMainMenu.h  StateNewGame.cpp  StateNewGame.h  StatePlanetMap.cpp  StatePlanetMap.h  StateSettings.cpp  StateSettings.h  StateTest.cpp  StateTest.h  StatesIds.h
src/Widgets/: ButtonBuildNewUnit.cpp  ButtonBuildNewUnit.h  ButtonCloseDialog.cpp  ButtonCloseDialog.h  ButtonDialogBack.cpp  ButtonDialogBack.h  ButtonDialogContinue.cpp  ButtonDialogContinue.h  ButtonDialogSelect.cpp  ButtonDialogSelect.h  ButtonMainMenu.cpp  ButtonMainMenu.h  ButtonMainMenuSocial.cpp  ButtonMainMenuSocial.h  ButtonMainMenuWishlist.cpp  ButtonMainMenuWishlist.h  ButtonMinimap.cpp  ButtonMinimap.h  ButtonNavigation.cpp  ButtonNavigation.h  ButtonPanelPlayer.cpp  ButtonPanelPlayer.h  ButtonPanelTab.cpp  ButtonPanelTab.h  ButtonPlanetMap.cpp  ButtonPlanetMap.h  ButtonQuickUnitSelection.cpp  ButtonQuickUnitSelection.h  ButtonUnitsSelector.cpp  ButtonUnitsSelector.h  ButtonsPanel.cpp  (+82 more)
(+7 files in other folders)
